--- a/zodiac.html
+++ b/zodiac.html
@@ -151,7 +151,7 @@ input[type="range" i] {
 <br>
 
 <br>
-<a class="btn btn-primary" href="#">Beli Diamond Mobile Legend</a>
+<a class="btn btn-primary" href="./feature/mobile-legends.html">Beli Diamond Mobile Legend</a>
 </a>
 </div>
 </div>
