--- a/index.html
+++ b/index.html
@@ -253,7 +253,7 @@
  <div class="contact" id="contact">
     <div class="container">
         <div class="card-container">
-            <form action="https://formsubmit.co/el/vunoba" method="POST" />
+            <form id="contact-form">
                 <h2>Contact Us</h2>
                 <input type="text" id="first_name" name="first_name" placeholder="First Name" required/>
                 <input type="text" id="last_name" name="last_name" placeholder="Last Name" required/>
@@ -265,6 +265,7 @@
         </div>
     </div>
 </div>
+<script src="assets/js/send_email.js"></script>
 <!-- Contact -->
 
 
