--- a/wr.html
+++ b/wr.html
@@ -372,3 +372,9 @@ input[type="range" i] {
             hasil.addEventListener("click", res);
         }
     </script>
+
+
+    <script src="../assets/js/burger.js"></script>
+    <script src="../assets/js/order.js"></script>
+    <script src="../assets/js/key.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
