--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
     </div>
     <ul class="fab-options">
         <li>
-            <a href="https://www.instagram.com/" target="_blank">
+            <a href="https://www.instagram.com/myup_storee" target="_blank">
                 <div class="fab-icon-holder" style="background: radial-gradient(circle farthest-corner at 35% 90%, #fec564, transparent 50%), radial-gradient(circle farthest-corner at 0 140%, #fec564, transparent 50%), radial-gradient(ellipse farthest-corner at 0 -25%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 20% -50%, #5258cf, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 0, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 60% -20%, #893dc2, transparent 50%), radial-gradient(ellipse farthest-corner at 100% 100%, #d9317a, transparent), linear-gradient(#6559ca, #bc318f 30%, #e33f5f 50%, #f77638 70%, #fec66d 100%);">
                     <i class="fab fa-instagram ml-0"></i>
                 </div>
@@ -280,7 +280,7 @@
                  <div class="col-12 mb-2">
                    <p class="text-center text-md-left"> Ikuti Kami</p>
 
-                   <a href="https://www.instagram.com/myupstoree?igsh=dzF5MGttdWI3Mm4w" rel="noreferrer" target="_blank" data-cy="instagram-icon"><img src="assets/img/logo ig.png" alt="Instagram" width="40" height="40" loading="lazy">&nbsp;</a>
+                   <a href="https://www.instagram.com/myup_storee" rel="noreferrer" target="_blank" data-cy="instagram-icon"><img src="assets/img/logo ig.png" alt="Instagram" width="40" height="40" loading="lazy">&nbsp;</a>
                   
                   </div>
                                
