--- a/index.html
+++ b/index.html
@@ -100,7 +100,10 @@
                 <li class="nav-item"><a href="magic.html" class="nav-link">Hitung Poin Magic</a></li>
                 <li class="nav-item"><a href="wr.html" class="nav-link">Hitung Win Rate</a></li>
               </ul>
-            </li>                         
+            </li> 
+            <li class="nav-item">
+            <a href="https://myup0.wordpress.com/portofolio/" class="nav-link"><i class="fas fa-user"></i><span>Portofolio</span></a>
+        </li>
           </ul>
         </div>
       </nav>
