--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
         <div class="container">
           <div class="box-tes">
             <div class="box">
-              <img src="assets/img/ads/ads1.jpg" alt="Poster" />
+              <img src="assets/img/ads/MyUp.png" alt="Poster" />
               <!-- <h3>Iklan</h3> -->
               <!-- <p>blabalbala</p> -->
               <button>
@@ -239,12 +239,12 @@
               </button>
             </div>
             <div class="box">
-              <img src="assets/img/ads/ads1.jpg" alt="Video" />
+              <img src="assets/img/ads/ads1.jpg" alt="Poster" />
               <!-- <h3>Iklan 2</h3> -->
               <!-- <p>blabalbala</p> -->
               <button>
                 <a href="https://www.instagram.com/myup_storee"
-                  >Tonton</a>
+                  >Lihat</a>
               </button>
             </div>
           </div>
